Fix histogram selection flicker and add support for streaming values

--- a/src/viz-shared/index.less
+++ b/src/viz-shared/index.less
@@ -6,6 +6,10 @@
     .rc-slider-tooltip, .tooltip, .rc-color-picker {
         z-index: @tooltip-z;
     }
+    .rc-switch-inner {
+        left: 23px;
+        font-size: 11px;
+    }
     .graphistry-body {
         // visibility: hidden;
         background-color: @graphistry-background !important;
